--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "kartik-v/yii2-widget-alert": "*",
         "kartik-v/yii2-widget-colorinput": "*",
         "kartik-v/yii2-widget-datepicker": "*",
-        "kartik-v/yii2-widget-datetimepicker": "*",
+        "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "kartik-v/yii2-widget-depdrop": "*",
         "kartik-v/yii2-widget-fileinput": "*",
         "kartik-v/yii2-widget-growl": "*",
